// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Certificação — regressão industrial (snapshots) > furação europeia na lateral — apenas cavilhas + rasgo (sem Ø5) 1`] = `
[
  {
    "face": "A",
    "x": 8,
    "y": 15,
  },
  {
    "face": "A",
    "x": 8,
    "y": 436.5,
  },
  {
    "face": "A",
    "x": 490,
    "y": 15,
  },
  {
    "face": "A",
    "x": 490,
    "y": 439.5,
  },
]
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=1 > gera peças, dimensões e offsets consistentes 1`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 594.5,
  "bodyWidth": 548,
  "height": 680,
  "index": 0,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": 1,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=2 > gera peças, dimensões e offsets consistentes 1`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 251.5,
  "bodyWidth": 548,
  "height": 337,
  "index": 0,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": -170.5,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=2 > gera peças, dimensões e offsets consistentes 2`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 270.5,
  "bodyWidth": 548,
  "height": 339,
  "index": 1,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": 171.5,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=3 > gera peças, dimensões e offsets consistentes 1`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 137.16666666666666,
  "bodyWidth": 548,
  "height": 222.66666666666666,
  "index": 0,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": -227.66666666666669,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=3 > gera peças, dimensões e offsets consistentes 2`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 156.16666666666669,
  "bodyWidth": 548,
  "height": 224.66666666666669,
  "index": 1,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": 0,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=3 > gera peças, dimensões e offsets consistentes 3`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 156.16666666666669,
  "bodyWidth": 548,
  "height": 224.66666666666669,
  "index": 2,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": 228.6666666666667,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=4 > gera peças, dimensões e offsets consistentes 1`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 80,
  "bodyWidth": 548,
  "height": 165.5,
  "index": 0,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": -256.25,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=4 > gera peças, dimensões e offsets consistentes 2`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 99,
  "bodyWidth": 548,
  "height": 167.5,
  "index": 1,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": -85.75,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=4 > gera peças, dimensões e offsets consistentes 3`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 99,
  "bodyWidth": 548,
  "height": 167.5,
  "index": 2,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": 85.75,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;

exports[`Certificação — regressão industrial (snapshots) > gavetas normais — count=4 > gera peças, dimensões e offsets consistentes 4`] = `
{
  "bodyDepth": 500,
  "bodyHeight": 99,
  "bodyWidth": 548,
  "height": 167.5,
  "index": 3,
  "metalBoxType": "Nenhuma",
  "nominalDepth": 500,
  "posX": 0,
  "posY": 257.25,
  "posZ": 271.5,
  "pullDistanceMm": 500,
  "slideType": "Hettich Quadro V6 You M Silent System",
  "softClose": true,
  "width": 596,
}
`;
